Thu Oct  8 15:53:59 1998  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtktypeutils.c (gtk_type_class_init): Fixed warning
	message to print out parent class name correctly.

Thu Oct  8 07:07:10 1998  Tim Janik  <timj@gtk.org>

	* gtk/gtkobject.h: 
	* gtk/gtkobject.c:
	removed functions gtk_object_set_data_destroy and
 	gtk_object_set_data_destroy_by_id.
	added functions gtk_object_remove_no_notify and
 	gtk_object_remove_no_notify_by_id which will remove a certain data
 	portion without invokation of its destroy notifier, this should only
 	be used in very controled circumstances.

Wed Oct  7 23:59:37 1998  Lars Hamann  <lars@gtk.org>

	* gtk/gtkclist.c (gtk_clist_set_column_resizeable): added
	size_allocate_title_buttons call
	(gtk_clist_realize): changed initial column.window position

Wed Oct  7 20:27:28 1998  Lars Hamann  <lars@gtk.org>

	* gtk/gtkctree.h (struct _GtkCTree): removed xor_gc, use clists
	xor_gc instead
	* gtk/gtkctree.c (create_xor_gc): removed
	(gtk_ctree_button_press): set correct line_attributes for
 	clist->xor_gc on drag start
	(gtk_ctree_button_release): reset clist->xor_gc

Wed Oct  7 05:15:36 1998  Tim Janik  <timj@gtk.org>

	* gtk/gtk*.h:
	* gdk/gdk.h: removed all occourances of #pragma } and #pragma {
	which were in place to fixup emacs' cc-mode indentation.
	putting (c-set-offset 'inextern-lang 0) into ~/.emacs is the
	proper way to achive this and doesn't produce problems for
	stupid pragma-related compiler bugs. ;)

Wed Oct  7 00:59:46 1998  Lars Hamann  <lars@gtk.org>

	* gtk/gtkclist.h: new signal GtkCList::resize_column.
	* gtk/gtkclist.c (draw_row): don't draw invisible columns
	(size_allocate_title_buttons) (size_allocate_columns):
	skip invisible columns
	(new_column_width): take min/max_width into account 
	(gtk_clist_button_release) (gtk_clist_motion):
 	changes due to changed new_column_width function
	(LIST_WIDTH): changed define to inline function.
	(real_resize_column): class function for resize_column signal